refactor: remove route to task queue activity (#14527)