@@ -11,6 +11,8 @@ import static io.airbyte.metrics.lib.ApmTraceConstants.WORKFLOW_TRACE_OPERATION_
 import com.fasterxml.jackson.databind.JsonNode;
 import datadog.trace.api.Trace;
 import io.airbyte.commons.constants.WorkerConstants;
+import io.airbyte.commons.temporal.TemporalJobType;
+import io.airbyte.commons.temporal.TemporalTaskQueueUtils;
 import io.airbyte.commons.temporal.TemporalWorkflowUtils;
 import io.airbyte.commons.temporal.annotations.TemporalActivityStub;
 import io.airbyte.commons.temporal.exception.RetryableException;
@@ -78,9 +80,6 @@ import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceAc
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.HydrateOutput;
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.PersistInput;
 import io.airbyte.workers.temporal.scheduling.activities.RetryStatePersistenceActivity.PersistOutput;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity.RouteToSyncTaskQueueInput;
-import io.airbyte.workers.temporal.scheduling.activities.RouteToSyncTaskQueueActivity.RouteToSyncTaskQueueOutput;
 import io.airbyte.workers.temporal.scheduling.activities.StreamResetActivity;
 import io.airbyte.workers.temporal.scheduling.activities.StreamResetActivity.DeleteStreamResetRecordsForJobInput;
 import io.airbyte.workers.temporal.scheduling.activities.WorkflowConfigActivity;
@@ -111,9 +110,7 @@ import lombok.extern.slf4j.Slf4j;
 public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow {
 
   private static final String GENERATE_CHECK_INPUT_TAG = "generate_check_input";
-  private static final String SYNC_TASK_QUEUE_ROUTE_RENAME_TAG = "sync_task_queue_route_rename";
   private static final int GENERATE_CHECK_INPUT_CURRENT_VERSION = 1;
-  private static final int SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION = 1;
   private static final String CHECK_WORKSPACE_TOMBSTONE_TAG = "check_workspace_tombstone";
   private static final int CHECK_WORKSPACE_TOMBSTONE_CURRENT_VERSION = 1;
   private static final String PASS_DEST_REQS_TO_CHECK_TAG = "pass_dest_reqs_to_check";
@@ -140,8 +137,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   private RecordMetricActivity recordMetricActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
   private WorkflowConfigActivity workflowConfigActivity;
-  @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
-  private RouteToSyncTaskQueueActivity routeToSyncTaskQueueActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
   private FeatureFlagFetchActivity featureFlagFetchActivity;
   @TemporalActivityStub(activityOptionsBeanName = "shortActivityOptions")
@@ -410,7 +405,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
     accumulateFailureAndPersist(madeProgress);
 
     final FailureType failureType =
-        standardSyncOutput != null ? standardSyncOutput.getFailures().isEmpty() ? null : standardSyncOutput.getFailures().get(0).getFailureType()
+        standardSyncOutput != null ? standardSyncOutput.getFailures().isEmpty() ? null : standardSyncOutput.getFailures().getFirst().getFailureType()
             : null;
     if (isWithinRetryLimit(attemptNumber) && failureType != FailureType.CONFIG_ERROR) {
       // restart from failure
@@ -705,7 +700,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
 
   @Override
   public JobInformation getJobInformation() {
-    final Long jobId = workflowInternalState.getJobId() != null ? workflowInternalState.getJobId() : NON_RUNNING_JOB_ID;
+    final long jobId = workflowInternalState.getJobId() != null ? workflowInternalState.getJobId() : NON_RUNNING_JOB_ID;
     final Integer attemptNumber = workflowInternalState.getAttemptNumber();
     return new JobInformation(
         jobId,
@@ -739,10 +734,10 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   /**
    * This is running a lambda function that takes {@param input} as an input. If the run of the lambda
    * throws an exception, the workflow will retried after a short delay.
-   *
+   * <p>
    * Note that if the lambda activity is configured to have retries, the exception will only be caught
    * after the activity has been retried the maximum number of times.
-   *
+   * <p>
    * This method is meant to be used for calling temporal activities.
    */
   private <INPUT, OUTPUT> OUTPUT runMandatoryActivityWithOutput(final Function<INPUT, OUTPUT> mapper, final INPUT input) {
@@ -916,7 +911,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
         attemptNumber,
         jobId);
 
-    final JobInput syncWorkflowInputs = runMandatoryActivityWithOutput(
+    return runMandatoryActivityWithOutput(
         (input) -> {
           try {
             return getSyncInputActivity.getSyncWorkflowInputWithAttemptNumber(input);
@@ -925,8 +920,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
           }
         },
         getSyncInputActivitySyncInput);
-
-    return syncWorkflowInputs;
   }
 
   /**
@@ -945,35 +938,6 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
         getSyncInputActivitySyncInput);
 
     return checkConnectionInputs;
-  }
-
-  private String getSyncTaskQueue() {
-
-    final RouteToSyncTaskQueueInput RouteToSyncTaskQueueInput = new RouteToSyncTaskQueueInput(connectionId);
-    final int checkWithApiVersion =
-        Workflow.getVersion(SYNC_TASK_QUEUE_ROUTE_RENAME_TAG, Workflow.DEFAULT_VERSION, SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION);
-
-    final RouteToSyncTaskQueueOutput routeToSyncTaskQueueOutput;
-    if (checkWithApiVersion >= SYNC_TASK_QUEUE_ROUTE_RENAME_CURRENT_VERSION) {
-      routeToSyncTaskQueueOutput = runMandatoryActivityWithOutput(
-          routeToSyncTaskQueueActivity::routeToSync,
-          RouteToSyncTaskQueueInput);
-    } else {
-      routeToSyncTaskQueueOutput = runMandatoryActivityWithOutput(
-          routeToSyncTaskQueueActivity::route,
-          RouteToSyncTaskQueueInput);
-    }
-
-    return routeToSyncTaskQueueOutput.getTaskQueue();
-  }
-
-  private String getCheckTaskQueue() {
-    final RouteToSyncTaskQueueInput routeToCheckTaskQueueInput = new RouteToSyncTaskQueueInput(connectionId);
-    final RouteToSyncTaskQueueOutput routeToCheckTaskQueueOutput = runMandatoryActivityWithOutput(
-        routeToSyncTaskQueueActivity::routeToCheckConnection,
-        routeToCheckTaskQueueInput);
-
-    return routeToCheckTaskQueueOutput.getTaskQueue();
   }
 
   /**
@@ -1003,7 +967,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
    * make sense.
    */
   private StandardSyncOutput runChildWorkflow(final JobInput jobInputs) {
-    final String taskQueue = getSyncTaskQueue();
+    final String taskQueue = TemporalTaskQueueUtils.getTaskQueue(TemporalJobType.SYNC);
 
     final SyncWorkflow childSync = Workflow.newChildWorkflowStub(SyncWorkflow.class,
         ChildWorkflowOptions.newBuilder()
@@ -1024,7 +988,7 @@ public class ConnectionManagerWorkflowImpl implements ConnectionManagerWorkflow 
   private ConnectorJobOutput runCheckInChildWorkflow(final JobRunConfig jobRunConfig,
                                                      final IntegrationLauncherConfig launcherConfig,
                                                      final StandardCheckConnectionInput checkInput) {
-    final String taskQueue = getCheckTaskQueue();
+    final String taskQueue = TemporalTaskQueueUtils.getTaskQueue(TemporalJobType.CHECK_CONNECTION);
 
     final CheckConnectionWorkflow childCheck = Workflow.newChildWorkflowStub(CheckConnectionWorkflow.class,
         ChildWorkflowOptions.newBuilder()
